spring-mvc常用注解说明

--- a/java/Spring-mvc/常用注解说明.md
+++ b/java/Spring-mvc/常用注解说明.md
@@ -35,3 +35,20 @@ public String testRequestBodyAnnotation(@RequestBody String body){
 }
 ```
 
+![image-20191217214420746](F:\我的博客\image\image-20191217214420746.png)
+
+#### @PathVariable
+
+用于解析url中的参数（占位符）
+
+```java
+@RequestMapping("/pathVariable/{id}")
+public String testPathVariableAnnotation(@PathVariable String id){
+    System.out.println("参数"+id);
+    return "index";
+}
+```
+
+#### @RequestHeader
+
+获取请求头
